--- a/angular.json
+++ b/angular.json
@@ -80,6 +80,8 @@
               },
               "src/styles.css",
               "styles.css",
+              "../node_modules/font-awesome/css/font-awesome.css",
+              "../node_modules/bootstrap/dist/css/bootstrap.css",
               "../src/stylesheet/bootstrap.min.css",
               "../src/stylesheet/bootstrap-theme.min.css",
               "../src/stylesheet/my-styles.css",
@@ -92,8 +94,10 @@
             ],
             "scripts": [
               "../src/javascript/jquery-3.3.1.min.js",
+              "../node_modules/jquery/dist/jquery.min.js",
               "../src/javascript/bootstrap.min.js",
-              "../src/javascript/slick.min.js"
+              "../src/javascript/slick.min.js",
+              "../node_modules/bootstrap/dist/js/bootstrap.js"
             ],
             "assets": [
               "src/favicon.ico",
